test/files/neg/t7294b.check
t7294b.scala:1: warning: inheritance from class Tuple2 in package scala is deprecated: Tuples will be made final in a future version.
class C extends Tuple2[Int, Int](0, 0)
                ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
